AUGREL/src/objects/Forms_ResponseData__c.object
<CustomObject>
    <fields>
        <fullName>RequestID__c</fullName>
        <label>RequestID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_System__c</fullName>
        <label>Requesting System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Forms_ResponseData</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requesting_System__c</columns>
        <columns>RequestID__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Source_System__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RES-{000000}</displayFormat>
        <label>Forms_ResponseData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms_ResponseData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>